[package]
name = "maskedemail"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Yu-Fu Fu <yufu@yfu.tw>"]
description = "CLI for FastMail MaskedEmail"

[lib]
proc-macro = true

# [[bin]]
# name = "maskedemail"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-once-cell = "0.4.2"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.26", features = ["derive", "cargo"] }
clap-verbosity-flag = "2.0.0"
confy = "0.5.1"
derivative = "2.2.0"
env_logger = "0.9.3"
futures = "0.3.25"
itertools = "0.10.5"
log = "0.4.17"
once_cell = "1.16.0"
quote = "1.0.21"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
serde_tuple = "0.5.0"
shadow-rs = "0.17.1"
syn = "1.0.103"
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
shadow-rs = "0.17.1"
